--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-#Gradle
-.gradle
-
 #IntelliJ
 .idea
 
@@ -28,3 +25,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+#build files
+/build
